Bug 1946790 - Update --box-border-color in moz-box-common.css. r=#recomp-reviewers
moz-box-common.css was using the border-color-interactive token, so we
update it to use the newly updated --border-color instead.

Differential Revision: https://phabricator.services.mozilla.com/D248968

--- a/toolkit/content/widgets/moz-box-common.css
+++ b/toolkit/content/widgets/moz-box-common.css
@@ -5,7 +5,7 @@
 @layer box-common {
   :host {
     --box-border-width: var(--border-width);
-    --box-border-color: var(--border-color-interactive);
+    --box-border-color: var(--border-color);
     --box-border: var(--box-border-width) solid var(--box-border-color);
     --box-border-width-end: var(--box-border-width);
     --box-border-radius: var(--border-radius-medium);
